# android_ndk_gles20_test

app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/example/ling_pc/lession_0_mine/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: gl_code.cpp  native-lib.cpp  native-lib1.cpp
app/src/main/java/com/example/ling_pc/lession_0_mine/: GLLib.java  GLView.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/ling_pc/lession_0_mine/: ExampleUnitTest.java
